# cmake_template_for_cxx

./: CmakeLists.txt  LICENSE  README.md
common/: CMakeLists.txt  add.cpp  add.h
src/: CMakeLists.txt  main.cpp
